--- a/myRC.yml
+++ b/myRC.yml
@@ -3,13 +3,15 @@ kind: ReplicationController
 metadata:
    name: myjavaapp-rc
 spec:
-   replicas: 5
+   replicas: 2
    selector: 
      app: myjavaapp
+     version: 2.60.1
    template:
      metadata:
        labels:
           app: myjavaapp
+          version: 2.60.1 
      spec:
        containers:
        - name: myjavacontainer
